--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,4 +4,7 @@
 
 @import "~@fortawesome/fontawesome-free/css/fontawesome.css";
 @import "~@fortawesome/fontawesome-free/css/regular.css";
+@import "~@fortawesome/fontawesome-free/css/brands.css";
 @import "~@fortawesome/fontawesome-free/css/solid.css";
+
+@import "components/button.css";
