--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,4 +7,6 @@
 @import "~@fortawesome/fontawesome-free/css/brands.css";
 @import "~@fortawesome/fontawesome-free/css/solid.css";
 
+@import "~aos/dist/aos.css";
+
 @import "components/button.css";
